--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
     git:
       url: "https://gitee.com/openharmony-sig/flutter_packages.git"
       path: "packages/webview_flutter-v4.4.4/webview_flutter"
+  webview_flutter_platform_interface:
+    git:
+      url: "https://gitee.com/openharmony-sig/flutter_packages.git"
+      path: "packages/webview_flutter_platform_interface-v2.10.0/webview_flutter_platform_interface"
 
 dev_dependencies:
   flutter_test:
